# pymetallic

./: .gitignore  AI.md  LICENSE  Makefile  README.md  ci.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: README.md  basic_compute.py  demo.py  examples.py  usage.py
pymetallic/: __init__.py  libpymetallic.dylib  metallic.py
src/: SwiftMetalBridge.swift
src/pymetallic/: __init__.py  helpers.py  metallic.py
src/pymetallic/kernels/: #__init__.py#  README.md  __init__.py  demo_kernels.metal  fluid_simulation.metal  game_of_life.metal  helper_kernels.metal  image_processing.metal  linalg_kernels.metal
src/pymetallic/scripts/: demo.py  smoke.py
src/tests/: test_pymetal.py
tests/: test_async_writes.py  test_buffer_lifecycle.py  test_kernel_cache_safety.py  test_metal_resource_leaks.py  test_pymetal.py  test_scalar_operations.py
